--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   <title>Document</title>
 </head>
 <body>
+  <h1>Emote now</h1>
+  <p>
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+    Fuga aliquam cupiditate corrupti eum ullam, recusandae et 
+    accusamus quae voluptates ipsa corporis dolore aliquid! 
+    Consectetur voluptates sequi placeat, consequuntur saepe rem!
+  </p>
+
   <script>
     // write
     document.write("Hello World");
