--- a/del3.html
+++ b/del3.html
@@ -1,13 +1,13 @@
-!<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="del3.css">
     <title>Del 3</title>
+    <script defer src="del3.js"></script>
 </head>
 <body>
-    
-    <script src="del3.js"></script>
+    <div class="banner"></div>
 </body>
 </html>
