delete del3, changeName banner, add images, push banner and formular to main

--- a/main.html
+++ b/main.html
@@ -3,14 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="banner.css">
+  <link rel="stylesheet" href="formular.css">
   <title>Main Page</title>
 </head>
 <body>
-  <h1>Main Page</h1>
-  <p>
-    Her vil vi uploade vores delene.
-  </p>
-<script defer src="main.js"></script>
+  <div class="formular"></div>
+  <div class="banner"></div>
+
+<script src="formular.js"></script>
+<script src="banner.js"></script>
 </body>
 </html>
